# matflow-new

./: .gitignore  .pre-commit-config.yaml  CHANGELOG-dev.md  CHANGELOG.md  CITATION.cff  LICENSE  README.md  pyproject.toml
.chglog/: CHANGELOG.tpl.md  config.yml
.github/: CODEOWNERS  remotes.py
.github/workflows/: README.md  auto_add_to_board.yml  benchmark.yml  benchmark.yml.in  build-exes.yml  build-exes.yml.in  bump-downstream.yml  generate_workflows.py  get_invoc_cmd.py  get_invoc_cmd_interactive.py  release.yml  release.yml.in  test.yml  test.yml.in  test_direct_sub_jupyter_notebook.ipynb  test_direct_sub_python_script.py  test_pre_python.yml  test_pre_python.yml.in  vars.jsonc
docs/: make_vers_switcher.py  run_sphinx_apidoc.bat
docs/source/: conf.py  config.jsonc  config_app.py  config_common.py  index.rst  installation.rst  released_binaries.yml
docs/source/_static/css/: custom.css
docs/source/_static/js/: custom.js
docs/source/_templates/: custom-class-template.rst  custom-module-template.rst
docs/source/contribute/: index.rst
docs/source/development/: environments.rst  index.rst
docs/source/install/: index.rst
docs/source/reference/: api.rst  cli.rst  config_file.rst  glossary.rst  index.rst  matflow.data.rst  matflow.rst  modules.rst  template_components.rst  workflows.rst
docs/source/reference/template_components/: command_files.rst  environments.rst  parameters.rst  task_schemas.rst
docs/source/user/: how_to.rst  index.rst  tutorials.rst  whatis.rst
docs/source/user/how_to/: config.rst  environments.rst  index.rst  task_schemas.rst  template_components.rst  workflow_templates.rst  workflows.rst
docs/source/user/tutorials/: index.rst
install-test/: simple_workflow.yaml  workflow.yaml
install-test/config/: config.yml  environments.yaml  files.yaml  parameters.yaml  task_schemas.yaml
matflow/: __init__.py  _version.py  api.py  cli.py  parameters.py
matflow/__pyinstaller/: hook-matflow.py
matflow/data/: command_files.yaml  environments.yaml  parameters.yaml  task_schemas.yaml
matflow/data/demo_data/: __init__.py
matflow/data/demo_data_manifest/: demo_data_manifest.json
matflow/data/scripts/: demo_script_action.py  dump_group_data.py  import_VE.py  import_VE_orientations.py  main_script_test.py  read_my_file.py  read_t1_outfile_1.py  write_my_file.py  write_t1_infile_1.py
matflow/data/scripts/damask/: add_VE_buffer_zones.py  dump_all_yield_stresses.py  extract_damask_HDF5.py  generate_volume_element_extrusion.py  generate_volume_element_random_voronoi.py  generate_volume_element_voronoi.py  get_yield_stress.py  (+12 more)
matflow/data/template_components/: command_files.yaml  environments.yaml  parameters.yaml  task_schemas.yaml
matflow/data/workflows/: RVE_extrusion_EBSD.yaml  RVE_extrusion_EBSD_DIC.yaml  cubic_textures.yaml  damask_input_files.yaml  damask_numerics.yaml  fit_single_crystal_parameters.yaml  fit_yield_funcs.yaml  fit_yield_function.yaml  generate_volume_element_from_statistics.yaml  modify_volume_element.yaml  modify_volume_element_grid_size.yaml  moose_test.yaml  read_tensile_test_CSV.yaml  sample_orientations_CRC_file.yaml  sample_orientations_CTF_file.yaml  sample_texture_CRC_file.yaml  sample_texture_CTF_file.yaml  sample_texture_ODF_mat.yaml  sample_texture_model_ODF.yaml  sample_texture_random.yaml  simulate_yield_surface_2D.yaml  simulate_yield_surface_2D_brass.yaml  spread_orientations.yaml  subset_simulation.yaml  subset_simulation_DAMASK.yaml  subset_simulation_DAMASK_Al.yaml  subset_simulation_DAMASK_Mg.yaml  subset_simulation_DAMASK_Mg_ACS.yaml  subset_simulation_toy_model.yaml  subset_simulation_toy_model_ACS.yaml  subset_simulation_toy_model_ACS_external.yaml  subset_simulation_toy_model_CS.yaml  subset_simulation_toy_model_external.yaml  tension_DAMASK_Al.yaml  tension_DAMASK_Al_N_repeats.yaml  tension_DAMASK_Mg.yaml  tension_DAMASK_Ti.yaml  visualise_VE.yaml
matflow/param_classes/: __init__.py  discrete_voronoi.py  load.py  orientations.py  seeds.py  single_crystal_parameters.py  utils.py  voxel_map.py
matflow/tests/: conftest.py  test_cli.py  test_utils.py
matflow/tests/param_classes/: test_load.py  test_single_crystal_parameters.py
pyinstaller/: __init__.py  compress.ps1  compress.sh  hook-matflow.py  make.bat  make.ps1  make.sh
tests/: test_cli.py
(+39 files in other folders)
